Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127771

Windows flickering on macOS (Backingstore issue?)

    XMLWordPrintable

Details

    • macOS
    • fd60b48c1d677418ccf03eff9bdea40ec2486b58

    Description

      Sample application attached uses:

      • a QMainWindow, with a QLabel and a QQuickWidget side by side
      • qml scene consists of a Scene3D with a cube and a default forward renderer
      • in main(), forces QSG and Qt3D to use OpenGL backends

      On the mac, the app renders but flickers intermittently, often see a white surface across the entire window (including the other widgets, not just the quick widget and qt3d content).

      This does not NOT happen if Qt3D is not involved in the QML scene, or if the backends are the default (Metal for RHI, and RHI for Qt3D).

      Seems to be an issue how the backing store is rendered, maybe an interaction with how qt3d leaves the GL state?

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mkrus Mike Krus
            mkrus Mike Krus
            Votes:
            2 Vote for this issue
            Watchers:
            11 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes