Remove use of dummy surface

In the case of using a QRenderController, a dummy surface was used to
avoid messing about with the compositor. This is no longer needed due
to 6.X changes and was causing issues with compositing on macOS

Pick-to: 6.8
Ticket-number: QTBUG-127771
Change-Id: I072d44ad4bb2bf9fd48935d06dac6b4aff70fb45
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>
(cherry picked from commit fd60b48c1d677418ccf03eff9bdea40ec2486b58)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit d11d8d41764df8800b64ee0e0cb825f974e7ea2c)