src/quick3d/quick3dscene3d/scene3ditem_p.h
@@ -104,7 +104,6 @@ private:
     void mousePressEvent(QMouseEvent *event) override;
     bool needsRender(QRenderAspect *renderAspect);
     void updateWindowSurface();
-    void createDummySurface(QWindow *window, QRenderSurfaceSelector *surfaceSelector);
     void applyAspects();
 
     QStringList m_aspects;
@@ -123,7 +122,6 @@ private:
     QPointer<Qt3DRender::QCamera> m_camera;
     CameraAspectRatioMode m_cameraAspectRatioMode;
     CompositingMode m_compositingMode;
-    QOffscreenSurface *m_dummySurface;
     QMetaObject::Connection m_windowConnection;
     qint8 m_framesToRender;
 
